--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore MW CashPH, a trusted platform for secure and efficient financial transactions in the Philippines.">
     <meta name="keywords" content="MW CashPH, MW CashPH review, MW CashPH legit, MW CashPH not a scam, trusted financial platform, secure transactions, online financial services">
-    <meta name="author" content="Your Name">
     <title>MW CashPH: Your Trusted Financial Platform in the Philippines</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="canonical" href="https://micolionheart.github.io/mwcashph-review/">
+    <meta name="google-site-verification" content="KlL2gyJN5mAKYcYM6R7sgz-2SVxvl3d0-GEf2olO_aw" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JV37RRLJ84"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JV37RRLJ84');
+</script>
 </head>
 <body>
     <header>
